@@ -2,10 +2,12 @@ package com.type404.backend.global.userdetails;
 
 import com.type404.backend.domain.auth.entity.UserInfoEntity;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 public class CustomUserDetails implements UserDetails {
 
@@ -18,7 +20,8 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        // Entity에 Role 필드가 없으므로, 모든 사용자에게 USER 권한 부여
+        return List.of(new SimpleGrantedAuthority("ROLE_USER"));
     }
 
     @Override
